--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource/fredoka-one": "^5.0.5",
+    "@midudev/tailwind-animations": "^0.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
